--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,7 +163,7 @@
     div.gallery {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 1rem;
+        gap: 1rem;
         text-align: center;
     
     }
@@ -525,13 +525,16 @@ textarea {
     }
     div.gallery {
         display: grid;
-        grid-gap: 1rem;
+        gap: 1rem;
+        grid-template-columns: auto;
         margin: auto;
     }
 
     img.gallery {
         height: 20rem;
         width: auto;
+        margin-left:auto;
+        margin-right:auto;
     }
     
     .album {
