--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,6 +124,8 @@
         text-align: center;
         word-spacing: 1rem;
         font-size: 1vw;    
+        border: 1px solid red;
+        display: flexbox;
     }
 
 /*|| Blog*/
