--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,7 +124,6 @@
         text-align: center;
         word-spacing: 1rem;
         font-size: 1vw;    
-        border: 1px solid red;
         display: flexbox;
     }
 
@@ -206,7 +205,7 @@
     }
 
     #thumbnails {
-        display: inline-flexbox;
+        display: none;
         align-items:center;
         text-align: center;
         margin-left:auto;
