--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,6 +118,16 @@
         margin: auto;
     }
 
+    #dogContainer{
+        display: none;
+        text-align:center;
+    }
+
+    #dogImage {
+        height: 10rem;
+        width: auto;
+    }
+
 /*|| Navigation and Header*/
     nav {
         font-family: Arial, Helvetica, sans-serif;
@@ -418,7 +428,9 @@ textarea {
         margin-top: 1rem;
         overflow: hidden;
     }
-
+#dogContainer {
+    display: none;
+}
 
     
 }
@@ -539,6 +551,16 @@ textarea {
     #myForm {
         text-align: center;
     }
+
+    #dogContainer{
+        display: none;
+        text-align:center;
+    }
+
+    #dogImage {
+        height: 10rem;
+        width: auto;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -653,5 +675,15 @@ textarea {
 
      #myForm {
         text-align: center;
+    }
+
+    #dogContainer{
+        display: none;
+        text-align:center;
+    }
+
+    #dogImage {
+        height: 10rem;
+        width: auto;
     }
 }
