--- a/ArraySort/arraySort.css
+++ b/ArraySort/arraySort.css
@@ -3,6 +3,23 @@ body {
     align-items: center;
 }
 
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+p,
+li {
+    font-size: 1rem;
+}
+
 ul {
     display: inline-block;
     text-align: left;
