--- a/CSS/style.css
+++ b/CSS/style.css
@@ -181,6 +181,10 @@
         position: relative;
     }
 
+    article.blogpost:hover {
+        box-shadow: 0rem 0rem .5rem .5rem #4e4e4e;
+    }
+
     div.blog {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
